--- a/index.html
+++ b/index.html
@@ -32,20 +32,44 @@
 
         <section id="main_content">
           <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Introduction</h3>
 
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here using GitHub Flavored Markdown, select a template crafted by a designer, and publish. After your page is generated, you can check out the new branch:</p>
-
-<pre><code>var output = scripter
-.WithTypeReader(new TestTypeReader())
-.AddTypes(assembly)
-.ToString();
-</code></pre>
-
-<p>If you're using the GitHub for Mac, simply sync your repository and you'll see the new branch.</p>
+<p>TypeScripter is a .NET class library used to generate <a href="//www.typescriptlang.com">TypeScript</a> definitions for .NET types.</p>
 
 <h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Designer Templates</h3>
+<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span class="octicon octicon-link"></span></a>Basic Usage</h3>
+
+<h4>Code</h4>
+
+<pre><code>
+var scripter = new TypeScripter.Scripter();
+var output = scripter
+	.UsingTypeFilter(x => x == typeof(Exception))
+	.AddType(typeof(Exception))
+	.ToString();
+</code></pre>
+
+
+<h4>Output</h4>
+
+<pre><code>
+declare module System {
+	interface Exception {
+		Message: string;
+		Data: any;
+		InnerException: System.Exception;
+		TargetSite: any;
+		StackTrace: string;
+		HelpLink: string;
+		Source: string;
+		HResult: number;
+		GetBaseException() :System.Exception;
+		ToString() :string;
+		GetObjectData(info: any, context: any) :void;
+		GetType();
+	}
+}
+</code></pre>
 
 <p>We've crafted some handsome templates for you to use. Go ahead and continue to layouts to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved if it remained markdown format.</p>
 
