--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         </header>
 
         <section id="downloads" class="clearfix">
-          <a href="https://github.com/cjlpowers/TypeScripter/zipball/master" id="download-zip" class="button"><span>Download .zip</span></a>
+          <a href="https://www.nuget.org/packages/TypeScripter/" id="download-zip" class="button"><span>Download NuGet</span></a>
           <a href="https://github.com/cjlpowers/TypeScripter/tarball/master" id="download-tar-gz" class="button"><span>Download .tar.gz</span></a>
           <a href="https://github.com/cjlpowers/TypeScripter" id="view-on-github" class="button"><span>View on GitHub</span></a>
         </section>
